--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE HTML>
 <html>
 
-<header class="wrapper">
-  header
-  <link rel="stylesheet" type="text/css" href="style.css" title="style" />
-</header>
+<head class="wrapper">
+    <title>Wireframe</title>
+    head
+    <link rel="stylesheet" type="text/css" href="style.css" title="style" />
+</head>
 
 <body>
     <nav>
@@ -31,5 +32,6 @@
     <footer>
         footer
     </footer>
+</body>
 
 </html>
