Fixed HTML errors

--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en-us">
 
-<head class="wrapper">
+<head>
     <title>Wireframe</title>
-    head
     <link rel="stylesheet" type="text/css" href="style.css" title="style" />
 </head>
 
 <body>
-    <nav>
-        nav
-    </nav>
+    <header>head</header>
+    <nav>nav</nav>
 
     <section>
         section
         <article>
             article
             <div id="para">
-                h1, h2, h3
+                p1, p2, h3
             </div>
             <div>
                 p
